--- a/featured.html
+++ b/featured.html
@@ -60,9 +60,9 @@
   </nav>
 
   <!-- Featured -->
-  <section class="banner bg-primary text-center">
+  <section class="banner-featured bg-primary text-center">
     <div class="col-sm-8 col-md-8 col-lg-6 ml-auto mr-auto pb-3">
-      <h1 class="banner-h1">Featured</h1>
+      <h1 class="banner-h1">Featured Project</h1>
     </div>
 
   </section>
