--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     </div>
   </nav>
 
-  <section class="banner text-left">
+
+
+   <section class="banner text-left">
     <div class="col-sm-8 col-md-8 col-lg-6 ml-auto mr-auto text-left pb-3">
       <h1>Better design, <p class="banner-h1">better experiences.</p></h1>
       <h5 class="pb-3">I specialize in user experience and visual design, focussing on  simplicity, usefulness and responsiveness.</h5>
@@ -68,7 +70,6 @@
 
   </section>
 
-  </>
 
   <!-- Projects Grid Section -->
   <section class="portfolio pt-5 pb-5" id="portfolio">
@@ -275,7 +276,7 @@
       <div class="row text-center">
         <div class="col-sm-8 col-md-8 col-lg-8 ml-auto mr-auto text-left pb-3">
           <p class="lead">With a background in photography, I enjoy working with people to help them achieve print, web and UX related goals. I push myself to think outside the box to produce clever solutions.</p>
-          <p class="lead">I appreciate the challenges of communicating ideas visually. Recently, I've been focussing on user experience and interface design for virtual reality. Check out the <a href="featured.html">featured section.</a> Whenever I'm not working, I'm hiking, traveling or on the back of a horse.</p>
+          <p class="lead">I appreciate the challenges of communicating ideas visually. Recently, I've been focussing on user experience and interface design for virtual reality. Check out the <a href="featured.html">featured section.</a> Whenever I'm not working, I'm hiking, traveling or, on the back of a horse.</p>
         </div>
       </div>
       <div class="text-center">
