updated tenacre project title

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                   <i class="fa fa-search-plus fa-1x mb-2"></i>
-                  <h5 class="pr-3 pl-3">Photography, Restoration & Print Design</h5>
+                  <h5 class="pr-3 pl-3">Photography, Restoration & Company Calendar</h5>
                 </div>
               </div>
               <img class="img-fluid" src="img/projects/te/te-2.jpg" alt="commissions featured project image">
@@ -430,7 +430,7 @@
           <div class="col-lg-8 mx-auto">
 
             <h2 class="text-primary text-uppercase mb-0">Tenacre Foundation</h2>
-            <h3 class="text-primary text-uppercase mb-5">Photography, Restoration & Print Design</h3>
+            <h3 class="text-primary text-uppercase mb-5">Photography, Restoration & Company Calendar</h3>
 
             <p class="mb-3 lead text-left">Tenacre Foundation is a Christian Science Nursing Facility based in Princeton, New Jersey. Their property consists of 35 buildings of various sizes on approximately 70 acres, but when it began, it was just 10 acres.</p>
 
