--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="row text-center">
         <div class="col-sm-8 col-md-8 col-lg-8 ml-auto mr-auto text-left pb-3">
           <p>With a background in photography, I enjoy working with clients to help them achieve print, web and UX related goals. I push myself to think outside the box to produce clever solutions.</p>
-          <p>I enjoy the challenges of communicating ideas visually. Recently, I've been focussing on magazine design for print—check out the <a href="featured.html">featured section.</a> Whenever I'm not working, I'm hiking, traveling or, on the back of a horse.</p>
+          <p>I enjoy the challenges of communicating ideas visually. Recently, I've been focusing on magazine design for print—check out the <a href="featured.html">featured section.</a> Whenever I'm not working, I'm hiking, traveling or, on the back of a horse.</p>
         </div>
       </div>
       <div class="text-center">
