--- a/photography.html
+++ b/photography.html
@@ -69,7 +69,7 @@
     </div>
   </section>
 
-  <section class="w-75 mx-auto">
+  <section class="mx-auto">
 
 
   <p class="pt-5 pl-1 pr-1 lead text-center">Events · Weddings · Photo Restoration · Product · Travel · Photoshop</p>
