--- a/snowbirdhaven.html
+++ b/snowbirdhaven.html
@@ -70,17 +70,17 @@
     </div>
   </section>
 
-    <section class="w-75 mx-auto">
+    <section>
       <div class="col-lg-8 ml-auto mr-auto pt-4">
 
-        <p><a href="http://www.new.snowbirdhaven.ca" target="_blank">Snowbird Summer Haven</a> is a quiet and beautiful resort that offers cottage and RV site rentals in White Lake, ON. Their previous website was outdated, unresponsive and did a poor job of showcasing their beautiful property and was not easy for the end-user to navigate. The new site was built on UX principles, is responsive and also integrates clean, modern design with a sense of movement.</p>
+        <p>Snowbird Summer Haven is a quiet and beautiful resort that offers cottage and RV site rentals in White Lake, ON. Their previous website was outdated, difficult to navigate, and did a poor job of showcasing their beautiful property. The new site was built on UX principles, is responsive and also integrates clean, modern design with a sense of movement.</p>
 
         <div class="row text-center">
-          <div class="col-md-4 col-lg-4 col-xl-6 text-center mx-auto">
+          <div class="col-md-6 col-lg-6 col-xl-6 text-center mx-auto">
             <img class="img-fluid mb-2" src="img/projects/sshr/sshr-imac-1.png" alt="">
             <a class="btn btn-primary btn-md rounded-pill mb-2" href="http://www.snowbirdhaven.ca" target="_blank">Visit the Old Site</a>
           </div>
-          <div class="col-md-4 col-lg-4 col-xl-6 text-center mx-auto">
+          <div class="col-md-6 col-lg-6 col-xl-6 text-center mx-auto">
             <a class="d-block mx-auto mb-2" href="http://www.new.snowbirdhaven.ca" target="_blank">
               <img class="img-fluid project" src="img/projects/sshr/sshr-imac.jpg" alt="">
             </a>
