--- a/cmg-branding-guide.html
+++ b/cmg-branding-guide.html
@@ -76,9 +76,9 @@
     <div class="col-lg-8 ml-auto mr-auto pt-4">
       <p class="pb-3">After 18 years in the print industry, Coyle Publishing re-branded to Coyle Media Group. With this growth and expansion came the need for a brand book that reflected their modern renewal.</p>
 
-
-      <embed class="pdf-l" src="/img/projects/cmg/cmg-bg.pdf#view=fit" type="application/pdf" width="100%" height="600px" />
-      <embed class="pdf-s" src="/img/projects/cmg/cmg-bg.pdf#view=fit" type="application/pdf" width="100%" height="400px" />
+      <div class="embed-responsive embed-responsive-16by9">
+        <embed class="embed-responsive-item" src="/img/projects/cmg/cmg-bg.pdf#view=fit" type="application/pdf" width="100%" height="600px" />
+      </div>
 
       <div class="text-center">
         <a style="font-size: 36px;" href="/img/projects/cmg/cmg-bg.pdf" download><i class="fas fa-download text-primary"></i></a>
