--- a/index.html
+++ b/index.html
@@ -115,20 +115,13 @@
           </a>
           <p class="text-center pb-3 text-uppercase">Snowbird Haven Website</p>
         </div>
-        <!--
-        <div class="col-md-4 col-lg-4 col-xl-6 text-center mx-auto pt-5">
-          <a class="d-block mx-auto mb-2" href=".html">
-            <img class="img-fluid project" src="img/projects/davidson/d-feature.jpg" alt="">
+        <div class="ml-2 mr-2 col-md-8 col-lg-8 col-xl-8 text-center mx-auto pt-5">
+          <a class="d-block mx-auto mb-2" href="social-media.html">
+            <img class="img-fluid project" src="img/projects/social-media/sm-feat.jpg" alt="">
           </a>
-          <p class="text-center pb-3 text-uppercase">Media Kit</p>
+          <p class="text-center pb-3 text-uppercase font-weight-bold pt-2">Social Media</p>
         </div>
-        <div class="col-md-4 col-lg-4 col-xl-6 text-center mx-auto pt-5">
-          <a class="d-block mx-auto mb-2" href="davidson.html">
-            <img class="img-fluid project" src="img/projects/davidson/d-feature.jpg" alt="">
-          </a>
-          <p class="text-center pb-3 text-uppercase">Davidson Hearing Aid Centres</p>
-        </div>
-      -->
+
 
       </div>
     </div>
