--- a/snowbirdhaven.html
+++ b/snowbirdhaven.html
@@ -78,14 +78,13 @@
         <div class="row text-center">
           <div class="col-md-6 col-lg-6 col-xl-6 text-center mx-auto">
             <img class="img-fluid mb-2" src="img/projects/sshr/sshr-imac-1.png" alt="">
-            <a class="btn btn-primary btn-md rounded-pill mb-2" href="http://www.snowbirdhaven.ca" target="_blank">Visit the Old Site</a>
+            <p class="mb-2">Old Site</p>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-6 text-center mx-auto">
-            <a class="d-block mx-auto mb-2" href="http://www.new.snowbirdhaven.ca" target="_blank">
+            <a class="d-block mx-auto mb-2" href="http://www.snowbirdhaven.ca" target="_blank">
               <img class="img-fluid project" src="img/projects/sshr/sshr-imac.jpg" alt="">
             </a>
-            <a class="btn btn-primary btn-md rounded-pill mb-2" href="http://www.new.snowbirdhaven.ca" target="_blank">Visit the New Site</a>
-            <p class="text-left pb-3">Thank you for your patience—please keep in mind the site will be launched soon and is currently using a test URL—it may take longer than normal to load.</p>
+            <a class="btn btn-primary btn-md rounded-pill mb-2" href="http://www.snowbirdhaven.ca" target="_blank">Visit the New Site</a>
           </div>
         </div>
       </div>
