--- a/index.html
+++ b/index.html
@@ -90,27 +90,34 @@
 
   <!-- About Section -->
   <section class="pb-5 bg-secondary" id="about">
-    <div class="row pt-5">
+
 
     <!-- About Img Phone & Tablet -->
-      <div class="col-sm-7 col-md-6 col-lg-5 col-xl-4 text-center mx-auto pl-5 pr-5 pt-4 about-img">
+      <div class="col-sm-8 col-md-6 text-center mx-auto pt-5 about-img">
         <img class="pt-2 mx-auto img-fluid rounded-circle" src="img/han-01.jpg" alt="about section image of hannah hatherell">
       </div>
 
-      <!-- About Img Phone & Desktop -->
-      <div class="col-sm-7 col-md-6 col-lg-5 col-xl-4 text-center pt-4 about-img-desktop">
-        <div class="img-fluid"></div>
+      <!-- About Img Desktop -->
+
+      <div id="about" class="container">
+        <div class="row pt-4">
+            <div class="col-lg-5 col-xl-5 about-img-desktop">
+              <div class="img-fluid"></div>
+            </div>
+          <div class="col-md-12 col-lg-7 col-xl-7">
+            <h3 id="connect" class="text-uppercase text-primary pt-5 text-left">About Hannah</h3>
+            <p class="text-left">Specializing in user experience and visual design, I focus on simplicity, usefulness and responsiveness. With a background in photography and graphic design I enjoy creating unique and interactive digital experiences. I push myself to explore outside the box so I can produce clever and practical solutions.</p>
+            <p class="text-left">I appreciate the challenges of communicating ideas visually and love to be immersed in solving these problems. Whenever I'm not working I'm usually hiking, traveling or, spending time on the back of a horse.</p>
+            <div class="text-left">
+            <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com">Send a Message</a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="col-sm-9 col-md-6 col-lg-7 col-xl-8 mx-auto pl-5 pr-5">
-        <h3 id="connect" class="text-uppercase text-primary pt-5 text-left">About Hannah</h3>
-        <p class="text-left">Specializing in user experience and visual design, I focus on simplicity, usefulness and responsiveness. With a background in photography and graphic design I enjoy creating unique and interactive digital experiences. I push myself to explore outside the box so I can produce clever and practical solutions.</p>
-        <p class="text-left">I appreciate the challenges of communicating ideas visually and love to be immersed in solving these problems. Whenever I'm not working I'm usually hiking, traveling or, spending time on the back of a horse.</p>
-        <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com">Send a Message</a>
-      </div>
-    </div>
 
   </section>
+
 
   <section class="pt-5 pb-5" id="portfolio">
     <div class="container">
