--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -99,14 +99,14 @@
 
   <section class="w-75 mx-auto pt-5 pb-5">
 
-    <div class="col-lg-8 ml-auto mr-auto pt-4">
+    <div class="col-lg-8 mx-auto pt-4">
       <video class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
             <source src="img/projects/mpvr/mpvr-video.mp4" type="video/mp4">
           </video>
       <video class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
             <source src="img/projects/mpvr/mpvr-video.mp4" type="video/mp4">
           </video>
-      <video class="vimeo-sm" style="width: 340px; height: 160px" controls loop autoplay>
+      <video class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
             <source src="img/projects/mpvr/mpvr-video.mp4" type="video/mp4">
           </video>
 
