--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -91,7 +91,7 @@
       </div>
 
       <div class="text-center pb-2">
-        <h1 class="pb-0 mb-0">MasterpieceVR</h1>
+        <h1 class="pb-0 mb-0" style="font-size: 36px;">MasterpieceVR</h1>
         <p class="text-uppercase" style="font-size: 14px;">UX/UI for Virtual Reality</p>
       </div>
     </div>
