--- a/snowbirdhaven.html
+++ b/snowbirdhaven.html
@@ -94,14 +94,14 @@
 
     <div class="col-lg-8 ml-auto mr-auto pt-4">
 
-    <p>Snowbird Haven was in dire need of a solution to grow their business. Working with Snowbird Haven involved re-branding and updating their outdated website. This included the need for serach engine optimization and an easily-accesible way for the target
+    <p>Snowbird Haven was in dire need of a solution to grow their business. Working with Snowbird Haven involved re-branding and updating their outdated website. This included the need for search engine optimization and an easily-accessible way for the target
       audience to view available accomodations.</p>
 
     <p>Snowbird Haven is a quiet and beautiful resort that offers cottage and RV site rentals in White Lake, ON. Their primary focus is to accomodate citizens with long and short-term vacation rentals.</p>
 
     <div>
       <h3 class="pb-0 mb-0">Objectives</h3>
-      <p>Working with Snowbird Haven involved re-branding and building a stunning promotional business website. The new website was built to be easily-accesible and allowed clients to find information on long and short-term rentals in White Lake, ON.</p>
+      <p>Working with Snowbird Haven involved re-branding and building a stunning promotional business website. The new website was built to be easily-accessible and allowed clients to find information on long and short-term rentals in White Lake, ON.</p>
 
       <h3 class="pb-0 mb-0">Goals</h3>
       <ul>
