website update  july 28 v1
website update  july 28 v1

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 
   <section id="masthead" class="banner text-left">
-    <div class="col-sm-8 col-md-8 col-lg-6 ml-auto mr-auto text-left pb-3">
-      <h1>Better design, <p class="banner-h1">better experience.</p></h1>
+    <div class="col-sm-8 col-md-8 col-lg-6 mx-auto text-center pt-4">
+      <h1>Design for <strong class="banner-h1">experience.</strong></h1>
       <!--<h5 class="pb-3">I specialize in user experience and visual design, focusing on  simplicity, usefulness and responsiveness.</h5>
       <a class="btn btn-primary btn-md rounded-pill mb-1" href="featured.html">View Latest Work</a>-->
     </div>
@@ -105,7 +105,7 @@
               <div class="img-fluid"></div>
             </div>
           <div class="col-md-12 col-lg-7 col-xl-7">
-            <h3 id="connect" class="text-uppercase text-primary pt-5 text-left">About Hannah</h3>
+            <h3 class="text-uppercase text-primary pt-5 text-left">About Hannah</h3>
             <p class="text-left">Specializing in user experience and visual design, I focus on simplicity, usefulness and responsiveness. With a background in photography and graphic design I enjoy creating unique and interactive digital experiences. I push myself to explore outside the box so I can produce clever and practical solutions.</p>
             <p class="text-left">I appreciate the challenges of communicating ideas visually and love to be immersed in solving these problems. Whenever I'm not working I'm usually hiking, traveling or, spending time on the back of a horse.</p>
             <div class="text-left">
@@ -346,7 +346,7 @@
   </div>-->
 
   <!-- Footer -->
-  <footer class="footer text-center pb-3" id="footer">
+  <footer id="connect" class="footer text-center pb-3" id="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
