website update july 28 v2

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 
 
-  <section id="masthead" class="banner text-left">
-    <div class="col-sm-8 col-md-8 col-lg-6 mx-auto text-center pt-4">
+  <section id="masthead" class="banner">
+    <div class="banner-text col-sm-8 col-md-8 col-lg-6 mx-auto text-center pt-5">
       <h1>Design for <strong class="banner-h1">experience.</strong></h1>
       <!--<h5 class="pb-3">I specialize in user experience and visual design, focusing on  simplicity, usefulness and responsiveness.</h5>
       <a class="btn btn-primary btn-md rounded-pill mb-1" href="featured.html">View Latest Work</a>-->
@@ -99,13 +99,13 @@
 
       <!-- About Img Desktop -->
 
-      <div id="about" class="container">
+      <div class="container">
         <div class="row pt-4">
             <div class="col-lg-5 col-xl-5 about-img-desktop">
               <div class="img-fluid"></div>
             </div>
           <div class="col-md-12 col-lg-7 col-xl-7">
-            <h3 class="text-uppercase text-primary pt-5 text-left">About Hannah</h3>
+            <h3 class="text-uppercase text-primary text-left">About Hannah</h3>
             <p class="text-left">Specializing in user experience and visual design, I focus on simplicity, usefulness and responsiveness. With a background in photography and graphic design I enjoy creating unique and interactive digital experiences. I push myself to explore outside the box so I can produce clever and practical solutions.</p>
             <p class="text-left">I appreciate the challenges of communicating ideas visually and love to be immersed in solving these problems. Whenever I'm not working I'm usually hiking, traveling or, spending time on the back of a horse.</p>
             <div class="text-left">
@@ -276,8 +276,9 @@
 
   <!-- Publications Section Desktop End -->
 
-  <!-- Parallax -->
+  <!-- Parallax
   <div class="parallax-2"></div>
+  -->
 
 
 
