September 19 bio update and logo
September 19 bio update and logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger text-primary" href="#masthead">Hannah Hatherell</a>
+      <a href="index.html"><img src="img/logo.svg"></a>
+      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="#masthead">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -106,10 +107,13 @@
             </div>
           <div class="col-md-12 col-lg-7 col-xl-7">
             <h3 class="text-uppercase text-primary text-left">About Hannah</h3>
-            <p class="text-left">Specializing in user experience and visual design, I focus on simplicity, usefulness and responsiveness. With a background in photography and graphic design I enjoy creating unique and interactive digital experiences. I push myself to explore outside the box so I can produce clever and practical solutions.</p>
-            <p class="text-left">I appreciate the challenges of communicating ideas visually and love to be immersed in solving these problems. Whenever I'm not working I'm usually hiking, traveling or, spending time on the back of a horse.</p>
+
+            <p class="text-left">With a strong background in photography and graphic design, I specialize in creating interactive experiences for digital platforms and print media. My recent work includes front-end web design, user experience and interface design for virtual reality, and magazine layout design.</p>
+            <p class="text-left">Working in the design industry for over four years has grown my experience in client communication, learning how to collaborate effectively with a team, and develop an efficient workflow.</p>
+            <p class="text-left">This expertise has brought measurable success to the organizations I’ve had the opportunity to work with, and improved their products tenfold.</p>
+            <p class="text-left">Let's get in touch!</p>
             <div class="text-left">
-            <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com">Send a Message</a>
+            <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com">Send Hannah a Message</a>
             </div>
           </div>
         </div>
