--- a/photography.html
+++ b/photography.html
@@ -35,7 +35,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger text-primary" href="index.html">Hannah Hatherell</a>
+      <a href="index.html"><img src="img/logo.svg"></a>
+      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="#masthead">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 
           <i class="fa fa-bars"></i>
@@ -83,7 +84,7 @@
 
   <section class="mx-auto">
 
-
+<p class="pt-5 pl-1 pr-1 text-center">Instagram @wildhchild</p>
   <!--<p class="pt-5 pl-1 pr-1 text-center">Events · Weddings · Photo Restoration · Product · Travel · Photoshop</p>-->
 
     <div class="row pt-5 pb-5 pl-5 pr-5 mx-auto">
