--- a/jaski.html
+++ b/jaski.html
@@ -35,7 +35,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger text-primary" href="index.html">Hannah Hatherell</a>
+      <a href="index.html"><img src="img/logo.svg"></a>
+      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="#masthead">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 
           <i class="fa fa-bars"></i>
@@ -79,7 +80,7 @@
   <div class="col-lg-6 mx-auto w-75 pt-5">
     <div class="row text-center">
       <div class="text-center mx-auto">
-        <img class="img-fluid mb-2" src="img/projects/jaski/devices.png" alt="">
+        <img class="img-fluid mb-2 pt-5" src="img/projects/jaski/devices.png" alt="">
       </div>
     </div>
 
