--- a/motion-graphics.html
+++ b/motion-graphics.html
@@ -36,7 +36,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <a href="index.html"><img src="img/logo.svg"></a>
-      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="#masthead">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 
           <i class="fa fa-bars"></i>
