--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-  <title>JasKi Productions</title>
+  <title>Hannah Hatherell</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,125 +38,44 @@
       <a href="index.html"><img src="img/logo.svg"></a>
       <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-
-          <i class="fa fa-bars"></i>
-        </button>
-
+        <i class="fa fa-bars"></i>
+      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
           </li>
-          <div class="dropdown show">
-            <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
-
-            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="snowbirdhaven.html">Snowbird Haven Website</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">Virtual Reality UX/UI</a>
-              <a class="dropdown-item nav-item text-primary" href="jaski.html">JasKi Productions UX/UI</a>
-              <a class="dropdown-item nav-item" href="luxe.html">Luxe Magazine Ottawa</a>
-              <a class="dropdown-item nav-item" href="cmg-branding-guide.html">CMG Branding Guide</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Comic Book Illustration</a>
-              <a class="dropdown-item nav-item" href="graphic-design.html">Harper Graphic Design</a>
-              <a class="dropdown-item nav-item" href="motion-graphics.html">Archer Motion Graphics</a>
-            </div>
-          </div>
-
-          <!--<li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#portfolio">Projects</a>
-          </li>-->
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Projects</a>
+          </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="photography.html">Photography</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#connect">Connect</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#connect">Connect</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-<section class="mx-auto pt-5 bg-secondary">
-  <div class="col-lg-6 mx-auto w-75 pt-5">
-    <div class="row text-center">
-      <div class="text-center mx-auto">
-        <img class="img-fluid mb-2 pt-5" src="img/projects/jaski/devices.png" alt="">
-      </div>
-    </div>
 
-    <div class="text-center pb-2">
-      <h1 class="pb-0 mb-0">JasKi Productions</h1>
-      <p class="text-uppercase" style="font-size: 14px;">UX/UI Website Design</p>
-    </div>
+<section class="pt-5 mt-5">
+  <div class="mx-auto">
+    <embed class="pdf" src="img/hannah_hatherell.pdf#view=50%" type="application/pdf" width="100%" height="1000px" />
   </div>
+
+  <div class="text-center pt-5">
+    <a style="font-size: 36px;" href="img/hannah_hatherell.pdf.pdf" download><i class="fas fa-download text-primary"></i></a>
+  </div>
+  <p class="pb-2 pdf-text text-center pb-5">To view this project on your phone, please <a href="img/hannah_hatherell.pdf.pdf" download>download the pdf.</a></p>
+
 </section>
-
-  <section class="w-75 mx-auto">
-
-    <div class="col-lg-8 ml-auto mr-auto pt-4">
-
-      <p>JasKi Productions were in search of a solution that met all of the needs and requirements of an innovative and leading cloud production website that leveraged the latest advancements in technology, without significant investment. Working with JasKi Productions involved rebuilding an online presence to create an immersive and informative experience for key stakeholders and target audience.</p>
-
-      <p>JasKi Productions provides cloud services for animation professionals across the globe. Their primary focus is to connect businesses and assemble animation teams through cloud production—a way for people to collaborate regardless of their physical location.</p>
-
-      <div class="row text-center">
-        <div class="col-md-8 col-lg-8 col-xl-8 text-center mx-auto">
-          <img class="img-fluid mb-2" src="img/projects/jaski/logo-sbs.jpg" alt="">
-          <p class="mb-2">Previous logo (left) and new logo design (right).</p>
-        </div>
-      </div>
-
-      <div>
-        <h3 class="pb-0 mb-0">Objectives</h3>
-        <p>Working with Jaski Productions involved building a unique brand and promotional business website. The new website was built to be user-centric and allowed clients to find information pertaining to cloud production.</p>
-
-        <h3 class="pb-0 mb-0">Goals</h3>
-        <ul>
-          <li>Invest most of our time re-branding and designing the new website.</li>
-          <li>Examining and collecting data on competitors.</li>
-          <li>Structure information architecture to facilitate the users browsing behaviour.</li>
-          <li>Leverage extensive UX and creative design experience to ensure that the new web-presence is directed at key audience members: Major animation producers and production studios, micro Studios of animation professionals and independent animation
-            professionals.
-          </li>
-          <li>Create a mobile-first, responsive site that works effortlessly on all desktop and mobile devices.</li>
-          <li>Plan for additional future digital initiatives.</li>
-          <li>Include metadata tactics for improved search engine optimization.</li>
-          <li>Provide user-focused content, structure, and navigation.</li>
-          <li>Ensure ease of use for all site editors independent of their level of technology understanding.</li>
-        </ul>
-
-      </div>
-
-      <div class="row text-center pt-2 pb-4">
-        <div class="col-md-8 col-lg-8 col-xl-8 text-center mx-auto">
-          <img class="img-fluid mb-2" src="img/projects/jaski/icons.png" alt="">
-          <p class="mb-2">Custom icon design.</p>
-        </div>
-      </div>
-
-    </div>
-
-
-
-    <!--<div class="d-block mx-auto pb-5 pt-5 text-center">
-          <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/wp.svg" alt="adobe indesign logo">
-          <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/ps.svg" alt="adobe photoshop logo">
-          <img class="img-fluid d-inline pb-1 pl-1 pr-1" src="img/logos/ai.svg" alt="adobe illustrator logo">
-        </div>-->
-
-  <!--  <div class="text-center pb-5">
-      <a class="btn btn-primary btn-md rounded-pill mb-1" href="index.html#portfolio">Return to Projects</a>
-    </div>-->
-
-    </div>
-  </section>
-
-
 
 
 
   <!-- Footer -->
-  <footer class="footer text-center" id="footer">
+  <footer id="connect" class="footer text-center pb-3" id="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
@@ -188,7 +107,7 @@
           <h5 class="text-uppercase mb-1 text-primary">Navigate</h5>
           <ul class="list-inline mb-3">
             <li class="list-inline-item d-block">
-              <a href="index.html">Home</a>
+              <a href="index.html" class="text-primary">Home</a>
             </li>
             <li class="list-inline-item d-block">
               <a href="index.html#about">About</a>
@@ -215,7 +134,7 @@
               <a href="masterpiece-vr.html">Virtual Reality UX/UI</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="jaski.html" class="text-primary">Jaski Productions UX/UI</a>
+              <a href="jaski.html">Jaski Productions UX/UI</a>
             </li>
             <li class="list-inline-item d-block">
               <a href="luxe.html">Luxe Magazine Ottawa</a>
@@ -238,8 +157,8 @@
       </div>
   </footer>
 
-  <div class="copyright py-4 text-center text-white">
-    <div class="container">
+  <div class="copyright py-4 text-center"
+    <div class="container pt-1">
       <small class="font-weight-light">©2019 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
       <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
     </div>
