--- a/resume.html
+++ b/resume.html
@@ -38,21 +38,37 @@
       <a href="index.html"><img src="img/logo.svg"></a>
       <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa fa-bars"></i>
-      </button>
+
+          <i class="fa fa-bars"></i>
+        </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a>
           </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Projects</a>
-          </li>
+          <div class="dropdown show">
+            <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+
+            <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item nav-item" href="snowbirdhaven.html">Snowbird Haven Website</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">Virtual Reality UX/UI</a>
+              <a class="dropdown-item nav-item" href="jaski.html">JasKi Productions UX/UI</a>
+              <a class="dropdown-item nav-item" href="luxe.html">Luxe Magazine Ottawa</a>
+              <a class="dropdown-item nav-item text-primary" href="cmg-branding-guide.html">CMG Branding Guide</a>
+              <a class="dropdown-item nav-item" href="illustration.html">Comic Book Illustration</a>
+              <a class="dropdown-item nav-item" href="graphic-design.html">Harper Graphic Design</a>
+              <a class="dropdown-item nav-item" href="motion-graphics.html">Archer Motion Graphics</a>
+            </div>
+          </div>
+
+          <!--<li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#portfolio">Projects</a>
+          </li>-->
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="photography.html">Photography</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="#connect">Connect</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#connect">Connect</a>
           </li>
         </ul>
       </div>
@@ -61,8 +77,8 @@
 
 
 <section class="pt-5 mt-5">
-  <div class="mx-auto">
-    <embed class="pdf" src="img/hannah_hatherell.pdf#view=50%" type="application/pdf" width="100%" height="1000px" />
+  <div class="mx-auto w-75">
+    <embed class="pdf" src="img/hannah_hatherell.pdf#view=fit" type="application/pdf" width="100%" height="1000px" />
   </div>
 
   <div class="text-center pt-5">
