--- a/resume.html
+++ b/resume.html
@@ -76,15 +76,15 @@
   </nav>
 
 
-<section class="pt-5 mt-5">
-  <div class="mx-auto w-75">
-    <embed class="pdf" src="img/hannah_hatherell.pdf#view=fit" type="application/pdf" width="100%" height="1000px" />
+  <section class="w-75 mx-auto pt-5 mt-5 pb-5">
+    <div class="col-lg-8 ml-auto mr-auto pt-4">
+    <embed class="pdf" src="img/hannah_hatherell.pdf#view=fit" type="application/pdf" width="100%" height="800px" />
   </div>
 
   <div class="text-center pt-5">
     <a style="font-size: 36px;" href="img/hannah_hatherell.pdf.pdf" download><i class="fas fa-download text-primary"></i></a>
   </div>
-  <p class="pb-2 pdf-text text-center pb-5">To view this project on your phone, please <a href="img/hannah_hatherell.pdf.pdf" download>download the pdf.</a></p>
+  <p class="pb-2 pdf-text text-center pb-5">To view this project on your phone, please <a href="img/hannah_hatherell.pdf" download>download the pdf.</a></p>
 
 </section>
 
