--- a/index.html
+++ b/index.html
@@ -174,42 +174,20 @@
         <!-- Phone & Tablet -->
         <div class="col-md-6">
           <a class="d-block mx-auto mb-2" href="luxe.html">
-              <img class="img-fluid project cover-open" src="img/projects/luxe/luxe-spread.png" alt="">
+              <img class="img-fluid project cover-open" src="img/projects/luxe/luxe-spread-2.png" alt="">
             </a>
-          <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa</p>
+          <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Spring/Summer 2019</p>
         </div>
         <div class="col-md-6">
-          <a class="d-block mx-auto mb-2" href="cmg-branding-guide.html">
-              <img class="img-fluid project" src="img/projects/cmg/cmg-spread.png" alt="">
+          <a class="d-block mx-auto mb-2" href="luxe.html">
+              <img class="img-fluid project" src="img/projects/luxe/luxe-spread.png" alt="">
             </a>
-          <p class="text-center pb-3 text-uppercase text-white">CMG Branding Guide</p>
+          <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Fall 2019</p>
         </div>
       </div>
 
-      <!-- Desktop 3
-      <div class="row pt-5 text-center">
-        <div class="col-md-4 col-lg-4 col-xl-4 cards-desktop">
-          <a class="d-block mx-auto mb-2" href="luxe.html">
-            <div class="img-fluid luxe-card"></div>
-          </a>
-          <p class="text-center pb-3 text-uppercase">Luxe Magazine Ottawa</p>
-        </div>
-        <div class="col-md-4 col-lg-4 col-xl-4">
-          <a class="d-block mx-auto mb-2" href="cmg-branding-guide.html">
-            <div class="img-fluid cmg-card"></div>
-          </a>
-          <p class="text-center pb-3 text-uppercase">CMG Branding Guide</p>
-        </div>
-        <div class="col-md-4 col-lg-4 col-xl-4">
-          <a class="d-block mx-auto mb-2" href="annual-report.html">
-            <div class="img-fluid ar-card"></div>
-          </a>
-          <p class="text-center pb-3 text-uppercase pt-2">WAP Annual Report</p>
-        </div>
 
-      </div>-->
-
-      <!-- Desktop 2 -->
+      <!-- Desktop 1
       <div class="row pt-3 mx-auto">
         <div class="col-lg-6 cards-desktop mx-auto">
           <a class="d-block mx-auto" href="luxe.html">
@@ -223,7 +201,31 @@
           </a>
           <p class="text-center pb-3 text-uppercase text-white">CMG Branding Guide</p>
         </div>
+      </div> -->
+
+      <!-- Desktop 2 -->
+      <div class="row pt-3 mx-auto">
+        <div class="col-lg-6 cards-desktop mx-auto">
+          <a class="d-block mx-auto" href="luxe.html">
+            <div class="img-fluid luxe-card-2"></div>
+          </a>
+          <p class="text-center mb-0 text-uppercase text-white">Luxe Magazine Ottawa</p>
+          <p class="text-center pb-3 text-uppercase text-white" style="font-size: 14px;">Fall 2019</p>
+        </div>
+        <div class="col-lg-6 cards-desktop mx-auto">
+          <a class="d-block mx-auto" href="luxe.html">
+            <div class="img-fluid luxe-card"></div>
+          </a>
+          <p class="text-center mb-0 text-uppercase text-white">Luxe Magazine Ottawa</p>
+          <p class="text-center pb-3 text-uppercase text-white" style="font-size: 14px;">Spring/Summer 2019</p>
+        </div>
       </div>
+      <!--<div class="col-lg-6 cards-desktop mx-auto">
+        <a class="d-block mx-auto" href="cmg-branding-guide.html">
+          <div class="img-fluid cmg-card"></div>
+        </a>
+        <p class="text-center pb-3 text-uppercase text-white">CMG Branding Guide</p>
+      </div> -->
 
     </div>
   </section>
