--- a/luxe.html
+++ b/luxe.html
@@ -76,128 +76,132 @@
   </nav>
 
   <!-- Banner -->
+  <section class="text-center pt-5 mt-5">
+    <div class="row w-75 mx-auto pb-5">
 
-  <section class="mx-auto pt-5 bg-secondary">
-    <div class="col-sm-8 col-md-6 col-lg-5 mx-auto w-75 pt-5">
-      <div class="row text-center">
-        <a class="text-center mx-auto project" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
-          <img class="img-fluid" src="img/projects/luxe/luxe-cover.png" alt="">
-        </a>
-      </div>
-
-      <div class="text-center pb-2">
-        <h1 class="pb-0 mb-0">Luxe Magazine Ottawa</h1>
-        <h5 class="pb-0 text-uppercase">Spring 2019</h5>
-        <p class="text-uppercase" style="font-size: 14px;">Magazine Design</p>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Section -->
-  <section class="w-75 mx-auto pb-5">
-      <div class="col-lg-8 ml-auto mr-auto pt-4">
-        <p class="pb-3">LUXE Ottawa is a publication that offers information on the very best Ottawa has to offer. This 148 page project included front-to-back design of cover, layout, editorial and advertorial.</p>
-          <div class="mx-auto text-center">
-            <a class="btn btn-primary btn-md rounded-pill mb-1" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">Look Inside</a>
-          </div>
-          </div>
+      <div class="col d-inline">
+        <img class="img-fluid" src="img/projects/luxe/luxe-cover-fall.png" alt="">
+        <div>
+          <h3 class="pb-0 mb-0">Luxe Magazine Ottawa</h3>
+          <h5 class="pb-0 text-uppercase">Fall 2019</h5>
+          <p class="text-uppercase" style="font-size: 14px;">Magazine Design</p>
+          <a class="btn btn-primary btn-md rounded-pill mb-1" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">Look Inside</a>
         </div>
       </div>
-    </section>
+
+      <div class="col d-inline">
+        <img class="img-fluid" src="img/projects/luxe/luxe-cover.png" alt="">
+        <div>
+          <h3 class="pb-0 mb-0">Luxe Magazine Ottawa</h3>
+          <h5 class="pb-0 text-uppercase">Spring/Summer 2019</h5>
+          <p class="text-uppercase" style="font-size: 14px;">Magazine Design</p>
+          <a class="btn btn-primary btn-md rounded-pill mb-1" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">Look Inside</a>
+        </div>
+      </div>
     </div>
   </section>
 
 
-    <!-- Footer -->
-    <footer class="footer text-center" id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Location</h5>
-            <p class="mb-3">Ottawa, ON</p>
-          </div>
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Connect</h5>
-            <ul class="list-inline mb-3">
-              <li class="list-inline-item">
-                <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+<section class="text-center bg-secondary pt-5 mt-5 pb-5 mt-0">
+  <div class="mx-auto text-center pl-5 pr-5">
+    <p>LUXE Ottawa is a publication that offers information on the very best Ottawa has to offer.<br>These 148 and 132 page projects included front-to-back design of cover, layout, editorial, advertorial and advertisement design.</p>
+  </div>
+
+</section>
+
+
+
+
+
+  <!-- Footer -->
+  <footer class="footer text-center" id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
+          <h5 class="text-uppercase mb-1 text-primary">Location</h5>
+          <p class="mb-3">Ottawa, ON</p>
+        </div>
+        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
+          <h5 class="text-uppercase mb-1 text-primary">Connect</h5>
+          <ul class="list-inline mb-3">
+            <li class="list-inline-item">
+              <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-gray text-center rounded-circle" href="http://www.instahu.com/wildhchild" target="_blank">
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-gray text-center rounded-circle" href="http://www.instahu.com/wildhchild" target="_blank">
                   <i class="fab fa-instagram"></i>
                   </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
                     <i class="fas fa-envelope"></i>
                   </a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Navigate</h5>
-            <ul class="list-inline mb-3">
-              <li class="list-inline-item d-block">
-                <a href="index.html">Home</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#about">About</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#portfolio">Projects</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="photography.html">Photography</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="index.html#connect">Connect</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
-            <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
-            <ul class="list-inline mb-3">
-              <li class="list-inline-item d-block">
-                <a href="snowbirdhaven.html">Snowbird Haven Website</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="masterpiece-vr.html">Virtual Reality UX/UI</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="jaski.html">Jaski Productions UX/UI</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="luxe.html" class="text-primary">Luxe Magazine Ottawa</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="cmg-branding-guide.html">CMG Branding Guide</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="illustration.html">Comic Book Illustration</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="graphic-design.html">Harper Graphic Design</a>
-              </li>
-              <li class="list-inline-item d-block">
-                <a href="motion-graphics.html">Archer Motion Graphics</a>
-              </li>
-            </ul>
-          </div>
-
+            </li>
+          </ul>
         </div>
-    </footer>
 
-    <div class="copyright py-4 text-center text-white">
-      <div class="container">
-        <small class="font-weight-light">©2019 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
-        <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
+          <h5 class="text-uppercase mb-1 text-primary">Navigate</h5>
+          <ul class="list-inline mb-3">
+            <li class="list-inline-item d-block">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="index.html#about">About</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="index.html#portfolio">Projects</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="photography.html">Photography</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="index.html#connect">Connect</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-md-3 col-lg-3 mb-1 mb-lg-0">
+          <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
+          <ul class="list-inline mb-3">
+            <li class="list-inline-item d-block">
+              <a href="snowbirdhaven.html">Snowbird Haven Website</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="masterpiece-vr.html">Virtual Reality UX/UI</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="jaski.html">Jaski Productions UX/UI</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="luxe.html" class="text-primary">Luxe Magazine Ottawa</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="cmg-branding-guide.html">CMG Branding Guide</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="illustration.html">Comic Book Illustration</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="graphic-design.html">Harper Graphic Design</a>
+            </li>
+            <li class="list-inline-item d-block">
+              <a href="motion-graphics.html">Archer Motion Graphics</a>
+            </li>
+          </ul>
+        </div>
+
       </div>
+  </footer>
+
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small class="font-weight-light">©2019 Hannah Hatherell ALL RIGHTS RESERVED</small><br>
+      <small>Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
     </div>
+  </div>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
@@ -207,20 +211,20 @@
   </div>
 
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+  <!-- Contact Form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/freelancer.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/freelancer.min.js"></script>
 
 </body>
 
