--- a/resume.html
+++ b/resume.html
@@ -38,9 +38,8 @@
       <a href="index.html"><img src="img/logo.svg"></a>
       <a class="navbar-brand js-scroll-trigger text-primary pl-3" href="index.html">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-
-          <i class="fa fa-bars"></i>
-        </button>
+        <i class="fa fa-bars"></i>
+      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
@@ -50,25 +49,18 @@
             <a class="dropdown-toggle pt-1 nav-link" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="snowbirdhaven.html">Snowbird Haven Website</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">Virtual Reality UX/UI</a>
-              <a class="dropdown-item nav-item" href="jaski.html">JasKi Productions UX/UI</a>
-              <a class="dropdown-item nav-item" href="luxe.html">Luxe Magazine Ottawa</a>
-              <a class="dropdown-item nav-item text-primary" href="cmg-branding-guide.html">CMG Branding Guide</a>
-              <a class="dropdown-item nav-item" href="illustration.html">Comic Book Illustration</a>
-              <a class="dropdown-item nav-item" href="graphic-design.html">Harper Graphic Design</a>
-              <a class="dropdown-item nav-item" href="motion-graphics.html">Archer Motion Graphics</a>
+              <a class="dropdown-item nav-item" href="index.html#illustration">Illustration</a>
+              <a class="dropdown-item nav-item" href="index.html#magazines">Magazine Design</a>
+              <a class="dropdown-item nav-item" href="index.html#branding">Branding</a>
+              <a class="dropdown-item nav-item" href="index.html#mographs">Motion Graphics</a>
+              <a class="dropdown-item nav-item" href="index.html#web">Web</a>
             </div>
           </div>
-
-          <!--<li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#portfolio">Projects</a>
-          </li>-->
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="photography.html">Photography</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#connect">Connect</a>
+            <a class="nav-link py-1 px-0 px-lg-3 rounded js-scroll-trigger" href="mailto:hannahhatherell@gmail.com" target="_blank">Connect</a>
           </li>
         </ul>
       </div>
@@ -144,28 +136,25 @@
           <h5 class="text-uppercase mb-1 text-primary">Projects</h5>
           <ul class="list-inline mb-3">
             <li class="list-inline-item d-block">
-              <a href="snowbirdhaven.html">Snowbird Haven Website</a>
+              <a href="graphic-design.html">Charley Harper Red Panda</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="masterpiece-vr.html">Virtual Reality UX/UI</a>
+              <a href="perrault.html">Plusieurs Pièces de Perrault</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="jaski.html">Jaski Productions UX/UI</a>
+              <a href="illustration.html">Marvel & DC Characters</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="luxe.html">Luxe Magazine Ottawa</a>
+              <a href="index.html#magazines">Luxe Ottawa Magazine</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="cmg-branding-guide.html">CMG Branding Guide</a>
+              <a href="index.html#branding">Branding Logo Design</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="illustration.html">Comic Book Illustration</a>
+              <a href="index.html#mographs">Motion Graphics</a>
             </li>
             <li class="list-inline-item d-block">
-              <a href="graphic-design.html">Harper Graphic Design</a>
-            </li>
-            <li class="list-inline-item d-block">
-              <a href="motion-graphics.html">Archer Motion Graphics</a>
+              <a href="index.html#web">SSHR WordPress Website</a>
             </li>
           </ul>
         </div>
