--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@
           <!-- Phone & Tablet -->
           <div class="col-md-6">
             <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/">
-                <img class="img-fluid project cover-open" src="img/projects/luxe/luxe-spread-2.png" alt="">
-              </a>
-            <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Spring/Summer 2019</p>
-          </div>
-          <div class="col-md-6">
-            <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/">
                 <img class="img-fluid project" src="img/projects/luxe/luxe-spread.png" alt="">
               </a>
             <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Fall 2019</p>
+          </div>
+          <div class="col-md-6">
+            <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/">
+                <img class="img-fluid project cover-open" src="img/projects/luxe/luxe-spread-2.png" alt="">
+              </a>
+            <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Spring/Summer 2019</p>
           </div>
         </div>
 
@@ -230,7 +230,7 @@
         <!-- Desktop 2 -->
         <div class="row pt-3 mx-auto">
           <div class="col-lg-6 cards-desktop mx-auto">
-            <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
+            <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
               <div class="img-fluid luxe-card-2"></div>
             </a>
             <p class="text-center mb-0 text-uppercase text-white">Luxe Magazine Ottawa</p>
@@ -254,7 +254,7 @@
 
     <h3 class="text-center text-uppercase pt-5 text-primary">Branding</h3>
     <p class="text-center">_____</p>
-    <p class="text-center">Logo design & branding guidelines.</p>
+    <p class="text-center">Logo design.</p>
     <div id="pw" class="container pb-5">
       <div class="row pt-4 text-center">
         <div class="col-md-4 col-lg-4 col-xl-4">
@@ -269,6 +269,7 @@
       </div>
     </div>
   </section>
+
 
 
   <!-- Motion Graphics Section -->
