--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
 
 
-  <section id="masthead" class="banner">
+  <!-- <section id="masthead" class="banner">
     <div class="banner-text col-sm-8 col-md-8 col-lg-6 mx-auto text-center pt-5">
       <h1>Design for <strong class="banner-h1">experience.</strong></h1>
-      <!--<h5 class="pb-3">I specialize in user experience and visual design, focusing on  simplicity, usefulness and responsiveness.</h5>
-      <a class="btn btn-primary btn-md rounded-pill mb-1" href="featured.html">View Latest Work</a>-->
+      <h5 class="pb-3">I specialize in user experience and visual design, focusing on  simplicity, usefulness and responsiveness.</h5>
+      <a class="btn btn-primary btn-md rounded-pill mb-1" href="featured.html">View Latest Work</a>
     </div>
 
-  </section>
+  </section> -->
 
 
   <!-- Projects Grid Section
@@ -296,69 +296,20 @@
 
   <!-- Web Section -->
   <section class="pt-5 pb-5 bg-secondary" id="web">
-    <!--<div class="container">
 
-      <div class="all-content">
-        <div class="container-1">
-        <div class="planet-1"></div>
-        <div class="planet-1-line-1"></div>
-        <div class="planet-1-line-2"></div>
-        <div class="planet-1-line-3"></div>
-        <div class="planet-1-circle-1"></div>
-        <div class="planet-1-circle-2"></div>
-      </div>
-
-      <div class="container-2">
-        <div class="planet-2-wrap">
-        <div class="planet-2"></div>
-        <div class="planet-2-ring-1"></div>
-         <div class="planet-2-circle-1"></div>
-         <div class="planet-2-circle-2"></div>
-         <div class="planet-2-circle-3"></div>
-         <div class="planet-2-circle-4"></div>
-         <div class="planet-2-circle-5"></div>
-         <div class="planet-2-circle-6"></div>
-      </div>
-      </div>
-
-      <div class="container-3">
-      <div class="planet-3"></div>
-      <div class="planet-3-circle-1"></div>
-      <div class="planet-3-circle-2"></div>
-      <div class="planet-3-circle-3"></div>
-      <div class="planet-3-ring"></div>
-      </div>
-      <div class="shadow"></div>
-      <div class="rocket">
-        <i class="fa fa-rocket" aria-hidden="true"></i>
-      </div>
-      </div>
-    </div> -->
 
       <h4 class="pt-1 pb-1 text-center pt-4 text-uppercase text-primary">Web</h4>
       <p class="text-center">_____</p>
       <p class="text-center">Snowbird Summer Haven Resort, a responsive WordPress website.</p>
 
-
-      <div class="row text-center">
-
-        <div class="mx-auto">
+        <div class="mx-auto text-center">
           <a class="d-block mx-auto" href="https://snowbirdhaven.ca" target="_blank">
               <img class="img-fluid project mb-4" src="img/projects/sshr/sshr-feature.png" alt="">
             </a>
-          <p class="text-center text-uppercase">Snowbird Haven</p>
+          <p class="text-center text-uppercase">Snowbird Haven Website</p>
         </div>
 
-        <!-- jaski
-          <div class="col-md-6 col-lg-6 col-xl-6 pb-5">
-            <a class="d-block mx-auto" href="jaski.html">
-                  <img class="img-fluid project mb-4" src="img/projects/jaski/devices.png" alt="">
-                </a>
-            <p class="text-center text-uppercase pt-2">JasKi Productions</p>
-          </div>
 
-        </div>
-      </div> -->
   </section>
 
 
