--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
 
-  <!-- Illsutration Section -->
+  <!-- Illustration Section -->
   <section class="publications text-center pb-4 text-white" id="illustration" style="background-color: #282c30;">
 
     <h3 class="text-center text-uppercase pt-5 text-primary">Illustration</h3>
@@ -294,7 +294,7 @@
   </section>
 
 
-  <!-- Web Section -->
+  <!-- Web Section
   <section class="pt-5 pb-5 bg-secondary" id="web">
 
 
@@ -308,14 +308,38 @@
             </a>
           <p class="text-center text-uppercase">Snowbird Haven Website</p>
         </div>
+  </section>-->
 
 
+  <!-- Web Section 3 -->
+  <section class="publications text-center pt-3 pb-5 bg-secondary" id="web">
+
+    <h3 class="text-center text-uppercase pt-5 text-primary">Web</h3>
+    <p class="text-center">_____</p>
+    <p class="text-center">Responsive WordPress websites designed for clients.</p>
+    <div id="pw" class="container pb-3">
+      <div class="row pt-4 text-center">
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <a class="d-block mx-auto mb-2" href="https://luxemagazineottawa.com" target="_blank">
+            <img class="img-fluid project" src="img/projects/luxe/luxe-web.png" alt="graphic design charley harper featured project image">
+          </a>
+          <p class="text-center pb-3 text-uppercase">Luxe Magazine Ottawa</p>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <a class="d-block mx-auto mb-2" href="https://snowbirdhaven.ca" target="_blank">
+            <img class="img-fluid project" src="img/projects/sshr/sshr-feature.png" alt="motion graphics archer featured project image">
+          </a>
+          <p class="text-center pb-3 text-uppercase">Snowbird Summer Haven Resort</p>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <a class="d-block mx-auto mb-2" href="https://blueocean.net" target="_blank">
+            <img class="img-fluid project" src="img/projects/bon-web.png" alt="photo restoration featured image">
+          </a>
+          <p class="text-center pb-3 text-uppercase">Blue Ocean Network</p>
+        </div>
+      </div>
+    </div>
   </section>
-
-
-
-
-
 
 
 
