oct 29 updated footer nav
oct 29 updated footer nav

--- a/perrault.html
+++ b/perrault.html
@@ -167,7 +167,13 @@
                 <a href="index.html#mographs">Motion Graphics</a>
               </li>
               <li class="list-inline-item d-block">
-                <a href="index.html#web">SSHR WordPress Website</a>
+                <a href="https://luxemagazineottawa.com" target="_blank">Luxe Ottawa Website</a>
+              </li>
+              <li class="list-inline-item d-block">
+                <a href="https://snowbirdhaven.ca" target="_blank">Snowbird Haven Website</a>
+              </li>
+              <li class="list-inline-item d-block">
+                <a href="https://blueocean.net" target="_blank">Blue Ocean Website</a>
               </li>
             </ul>
           </div>
