--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         <div class="col-md-12 col-lg-7 col-xl-7">
           <h3 class="text-uppercase text-primary text-left">About Hannah</h3>
 
-          <p class="text-left">With a background in photography and graphic design, I enjoy creating rich, interactive experiences for digital platforms and print media. My recent work includes front-end web design, user experience and interface design for virtual
-            reality, and magazine layout design.</p>
-          <p class="text-left">Working in the design industry for over four years has grown my experience in client communication, learning how to collaborate effectively with a team, and develop an efficient workflow.</p>
-          <p class="text-left">This expertise has brought measurable success to the organizations I’ve had the opportunity to work with, and improved their products tenfold.</p>
-          <p class="text-left">Let's get in touch!</p>
+          <p class="text-left">I'm a creative problem-solver with 5+ years in the design industry. I enjoy crafting rich, interactive experiences for digital platforms and print media.</p>
+          <p>Most recently I was positioned at Canopy Growth as a Production Designer. My current work includes process-building, magazine layout, front-end web design, as well as UX and UI design for virtual reality.</p>
+          <p class="text-left">I just launched a micro illustration business for the local Equine industry.
+            You can check it out on <a class="link" href="https://www.facebook.com/halfhaltillustrations/" target="blank">Facebook.</a></p>
+          <p class="text-left">I'm up for anything—let's get in touch!</p>
           <div class="text-left">
             <a class="btn btn-primary btn-md rounded-pill mb-2" href="mailto:hannahhatherell@gmail.com">Send Hannah a Message</a>
           </div>
@@ -258,13 +258,13 @@
     <div id="pw" class="container pb-5">
       <div class="row pt-4 text-center">
         <div class="col-md-4 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="img/projects/branding/rhh.png" alt="">
-        </div>
-        <div class="col-md-4 col-lg-4 col-xl-4">
           <img class="img-fluid" src="img/projects/branding/jaski.png" alt="">
         </div>
         <div class="col-md-4 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="img/projects/branding/cpt.png" alt="">
+          <img class="img-fluid" src="img/projects/branding/hhi.png" alt="">
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4">
+          <img class="img-fluid" src="img/projects/branding/rhh.png" alt="">
         </div>
       </div>
     </div>
