--- a/photography.html
+++ b/photography.html
@@ -76,7 +76,7 @@
 
   <section class="mx-auto">
 
-<p class="pt-5 pl-1 pr-1 text-center">Instagram @wildhchild</p>
+<p class="pt-5 pl-1 pr-1 text-center">Instagram @han.the.human</p>
   <!--<p class="pt-5 pl-1 pr-1 text-center">Events · Weddings · Photo Restoration · Product · Travel · Photoshop</p>-->
 
     <div class="row pt-5 pb-5 pl-5 pr-5 mx-auto">
